--- a/source/index.html
+++ b/source/index.html
@@ -238,6 +238,9 @@
                   <source srcset="img/prize1-mob.svg" media="(orientation: portrait)">
                   <img src="img/prize1.svg" alt="">
                 </picture>
+                <picture>
+                  <img src="img/module-3/img/primary-award-to.svg" alt="">
+                </picture>
               </div>
               <p class="prizes__desc">
                 <b>3</b>
@@ -246,9 +249,12 @@
             </li>
             <li class="prizes__item prizes__item--cases">
               <div class="prizes__icon">
-                <picture>
+                <!-- <picture>
                   <source srcset="img/prize2-mob.svg" media="(orientation: portrait)">
                   <img src="img/prize2.svg" alt="">
+                </picture> -->
+                <picture>
+                  <img src="img/module-3/img/primary-award-from.svg" alt="">
                 </picture>
               </div>
               <p class="prizes__desc">
@@ -258,9 +264,12 @@
             </li>
             <li class="prizes__item prizes__item--codes">
               <div class="prizes__icon">
-                <picture>
+                <!-- <picture>
                   <source srcset="img/prize3-mob.svg" media="(orientation: portrait)">
                   <img src="img/prize3.svg" alt="">
+                </picture> -->
+                <picture>
+                  <img src="img/module-3/img/primary-award-from.svg" alt="">
                 </picture>
               </div>
               <p class="prizes__desc">
