--- a/source/index.html
+++ b/source/index.html
@@ -236,7 +236,7 @@
               <div class="prizes__icon">
                 <picture>
                   <source srcset="img/prize1-mob.svg" media="(orientation: portrait)">
-                  <img src="img/prize1.svg" alt="">
+                  <img src="img/module-3/img/primary-award-from.svg" alt="">
                 </picture>
                 <picture>
                   <img src="img/module-3/img/primary-award-to.svg" alt="">
